turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: not found: value setCouleurBrose
        setCouleurBrose((colors(i+1)%length-1))
        ^LangtonsAnt:8: error: value % is not a member of java.awt.Color
        setCouleurBrose((colors(i+1)%length-1))
                                    ^LangtonsAnt:8: error: not found: value length
        setCouleurBrose((colors(i+1)%length-1))
                                     ^LangtonsAnt:10: error: not found: value leveBrose
        leveBrose()
        ^