turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var couleurSol=getCouleurSol()
  for (i<-0 to colors.length-1){
    if (getCouleurSol()==colors(i)){
      if (rule(i)=='L'){
        gauche()
        setCouleurBrose((colors(i+1)%length-1))
        baisseBrosse()
        leveBrose()
      }
    }
  }
}